app/assets/stylesheets/components/_buttons.scss
.btn-signup {
  margin-top: 1.5pc;
  color: #FAF0CA;
  padding: 14px 20px;
  border-radius: 5px;
  background: #6B2D5C;
  transition: background 0.3s ease;
  margin-top: 3.5pc;
  text-decoration: none;
}

.btn-login {
  margin-top: 1.5pc;
  color: #FAF0CA;
  padding: 14px 20px;
  border-radius: 5px;
  background: #6B2D5C;
  transition: background 0.3s ease;
  margin-top: 3.5pc;
  text-decoration: none;
}

.btn-signup:hover {
  color: #FAF0CA;
  background: #6B2D5C;
  background: linear-gradient(to right, #ffffff 50%, #6B2D5C 50%);
  background-size: 200% 100%;
  background-position: right bottom;
  transition: all 1.2s ease;
}

.btn-login:hover {
  color: #FAF0CA;
  background: #6B2D5C;
  background: linear-gradient(to right, #ffffff 50%, #6B2D5C 50%);
  background-size: 200% 100%;
  background-position: right bottom;
  transition: all 1.2s ease;
}

